[tool.poetry]
name = "aenet"
version = "0.4.0"
description = ""
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.24.1"
asgl = "^1.0.5"
cvxpy = "^1.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = 'black'
force_single_line = true
